# OS-labs

./: Readme
KP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kpout
KP/report/: .~lock.KP-report.docx#  KP-report.docx
KP/src/: FBalloc.cpp  FBalloc.h  MKKalloc.cpp  MKKalloc.h  main.cpp
lab-1/: CMakeLists.txt  Makefile  cmake_install.cmake
lab-1/report/: .~lock.lab1-report.docx#  lab1-report.docx
lab-1/src/: 1.txt  exec_child
lab-2/: .~lock.lab-2_report.docx#  CMakeCache.txt  Makefile  cmake_install.cmake
lab-2/report/: .~lock.lab-2_report.docx#  lab-2_report.docx
lab-2/src/: 1.txt  2.txt  exec_child.cpp  main  main.cpp
lab-3/: .~lock.lab3-report.docx#  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
lab-3/report/: .~lock.lab3-report.docx#  lab3-report.docx
lab-3/src/: big_massives.txt  create_test  create_test.cpp  main.cpp
lab-4/: 1.txt  CMakeCache.txt  CMakeLists.txt  Makefile  a1.txt  a2.txt  cmake_install.cmake  main  test.txt
lab-4/report/: .~lock.lab4-report.docx#  lab4-report.docx
lab-4/src/: lab.cpp
lab-5/: CMakeLists.txt
lab-5/include/: lib.h
lab-5/report/: .~lock.lab5-report.docx#  lab5-report.docx
lab-5/src/: config.h  config.h.in  lib1.cpp  lib2.cpp  main1.cpp  main2.cpp
lab-6/: CMakeLists.txt
lab-6/report/: .~lock.lab6-report.docx#  lab6-report.docx
lab-6/src/: client.cpp  config.cpp  config.h  interface.cpp  interface.h  server.cpp  tree.cpp  tree.h
